--- a/todo-app/todo-backend/docker-compose.dev.yml
+++ b/todo-app/todo-backend/docker-compose.dev.yml
@@ -14,6 +14,9 @@ services:
     image: redis
     ports:
       - 6379:6379
+    volumes:
+      - redis_data:/data
 
 volumes:
   mongo_data:
+  redis_data:
